# GR5072-Final-Project

final_project_jc5492/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Final project vignette.ipynb  LICENSE  README.md  pyproject.toml
final_project_jc5492/_build/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
final_project_jc5492/_build/.doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
final_project_jc5492/_build/.doctrees/autoapi/: index.doctree
final_project_jc5492/_build/.doctrees/autoapi/final_project_jc5492/: index.doctree
final_project_jc5492/_build/_modules/: index.html
final_project_jc5492/_build/_modules/final_project_jc5492/: final_project_jc5492.html
final_project_jc5492/_build/_sources/: example.ipynb.txt
final_project_jc5492/_build/_sources/autoapi/: index.rst.txt
final_project_jc5492/_build/_sources/autoapi/final_project_jc5492/: index.rst.txt
final_project_jc5492/_build/autoapi/: index.html
final_project_jc5492/_build/autoapi/final_project_jc5492/: index.html
final_project_jc5492/_build/autoapi/final_project_jc5492/final_project_jc5492/: index.html
final_project_jc5492/docs/: Makefile  conf.py  make.bat
final_project_jc5492/jupyter_execute/: example.ipynb  example.py
final_project_jc5492/src/final_project_jc5492/: __init__.py  final_project_jc5492.py
final_project_jc5492/tests/: test_final_project_jc5492.py
(+2 files in other folders)
